--- a/vignettes/simulation_study.Rmd
+++ b/vignettes/simulation_study.Rmd
@@ -1,10 +1,12 @@
 ---
 title: "4. Conduct a simulation study"
+bibliography: references.bib
 author: "Matt Secrest, Isaac Gravestock, Kexin Jin and Zhi Yang"
 output:
   rmarkdown::html_vignette:
     toc: true
     toc_depth: 3
+    code_folding: show
 vignette: >
   %\VignetteIndexEntry{4. Conduct a simulation study}
   %\VignetteEngine{knitr::rmarkdown}
@@ -21,7 +23,6 @@ Note that we'll need `cmdstanr` to run the simulation study. Please install
 [this guide](https://mc-stan.org/cmdstanr/articles/cmdstanr.html).
 
 Let's load `psborrow2` to start:
-
 
 
 ```r
@@ -68,7 +69,6 @@ HR of 1.0 and true HR of 0.8). Each scenario is arranged as a list of
 matrices that were generated according to that data generation scenario.
 
 <center>
-
 ![Figure 1](data_list.jpg){width=80%}
 
 </center>
@@ -82,8 +82,7 @@ external to internal controls). Suppose we have a function,
 That is:
 
 
-
-```r
+```{.r .fold-hide}
 library(simsurv)
 # function to create a single matrix
 sim_single_matrix <- function(n = 500, # n simulated pts
@@ -139,23 +138,9 @@ sim_single_matrix <- function(n = 500, # n simulated pts
 
 
 
-
 ```r
 set.seed(123)
 head(sim_single_matrix(n = 500, hr = 0.5, drift_hr = 1.2))
-```
-
-```
-##      id ext trt      time status cnsr
-## [1,]  1   0   0  8.179722      1    0
-## [2,]  2   0   0  6.884286      1    0
-## [3,]  3   0   0  2.348331      1    0
-## [4,]  4   0   0 17.898011      1    0
-## [5,]  5   0   0  3.870353      1    0
-## [6,]  6   0   0  6.795403      1    0
-```
-
-```r
 #      id ext trt      time status cnsr
 # [1,]  1   0   0  8.179722      1    0
 # [2,]  2   0   0  6.884286      1    0
@@ -174,10 +159,9 @@ scenarios:
 - True HR = 1.0, drift HR = 1.5
 
 
-
 ```r
 # Seed for reproducibility
-set.seed(222)
+set.seed(123)
 
 # Number of simulations per scenario
 n <- 10
@@ -206,54 +190,24 @@ my_data_list <- list(
 There are 4 scenarios.
 
 
-
 ```r
 NROW(my_data_list)
-```
-
-```
-## [1] 4
-```
-
-```r
 # [1] 4
 ```
 
-Each scenario has 100 matrices.
-
+Each scenario has 10 matrices.
 
 
 ```r
 NROW(my_data_list[[1]])
-```
-
-```
-## [1] 10
-```
-
-```r
-# [1] 100
+# [1] 10
 ```
 
 The lowest level of the list of lists is a data matrix.
 
 
-
 ```r
 head(my_data_list[[1]][[1]])
-```
-
-```
-##      id ext trt      time status cnsr
-## [1,]  1   0   0  5.064186      1    0
-## [2,]  2   0   0  1.734691      1    0
-## [3,]  3   0   0  3.816314      1    0
-## [4,]  4   0   0  8.869366      1    0
-## [5,]  5   0   0 23.292081      1    0
-## [6,]  6   0   0  3.802180      1    0
-```
-
-```r
 #      id ext trt      time status cnsr
 # [1,]  1   0   0  8.179722      1    0
 # [2,]  2   0   0  6.884286      1    0
@@ -281,7 +235,6 @@ In this example, the 4 scenarios are
 summarized with the below `guide`:
 
 
-
 ```r
 my_sim_data_guide <- expand.grid(
   true_hr = c(0.6, 1.0),
@@ -291,17 +244,6 @@ my_sim_data_guide <- expand.grid(
 my_sim_data_guide$id <- seq(1, NROW(my_sim_data_guide))
 
 my_sim_data_guide
-```
-
-```
-##   true_hr          drift_hr id
-## 1     0.6       No drift HR  1
-## 2     1.0       No drift HR  2
-## 3     0.6 Moderate drift HR  3
-## 4     1.0 Moderate drift HR  4
-```
-
-```r
 #   true_hr          drift_hr id
 # 1     0.6       No drift HR  1
 # 2     1.0       No drift HR  2
@@ -322,7 +264,6 @@ For our study, these are `"true_hr"`, `"drift_hr"`, and `"id"`.
 Putting it all together, we can create an object of class `SimDataList`:
 
 
-
 ```r
 my_sim_data_list <- sim_data_list(
   data_list = my_data_list,
@@ -333,24 +274,12 @@ my_sim_data_list <- sim_data_list(
 )
 
 my_sim_data_list
-```
-
-```
-## SimDataList object with  4  different scenarios
-##   true_hr          drift_hr id n_datasets_per_param
-## 1     0.6       No drift HR  1                   10
-## 2     1.0       No drift HR  2                   10
-## 3     0.6 Moderate drift HR  3                   10
-## 4     1.0 Moderate drift HR  4                   10
-```
-
-```r
 # SimDataList object with  4  different scenarios
 #   true_hr          drift_hr id n_datasets_per_param
-# 1     0.6       No drift HR  1                  100
-# 2     1.0       No drift HR  2                  100
-# 3     0.6 Moderate drift HR  3                  100
-# 4     1.0 Moderate drift HR  4                  100
+# 1     0.6       No drift HR  1                   10
+# 2     1.0       No drift HR  2                   10
+# 3     0.6 Moderate drift HR  3                   10
+# 4     1.0 Moderate drift HR  4                   10
 ```
 
 ## `outcome`
@@ -361,7 +290,6 @@ or a list of `Outcome` class objects passed to `sim_outcome_list()`. For our
 example, let's just use a single exponential distribution.
 
 
-
 ```r
 my_sim_out <- outcome_surv_exponential(
   time_var = "time",
@@ -370,24 +298,6 @@ my_sim_out <- outcome_surv_exponential(
 )
 
 my_sim_out
-```
-
-```
-## Outcome object with class OutcomeSurvExponential 
-## 
-## Outcome variables:
-## time_var cens_var 
-##   "time"   "cnsr" 
-## 
-## Baseline prior:
-## Normal Distribution
-## Parameters:
-##  Stan  R    Value
-##  mu    mean    0 
-##  sigma sd   1000
-```
-
-```r
 # Outcome object with class OutcomeSurvExponential 
 # 
 # Outcome variables:
@@ -419,7 +329,6 @@ We'll use a special list of `Borrowing` objects,
 which we'll create through the function `sim_borrowing_list()`.
 
 
-
 ```r
 my_borrowing_list <- sim_borrowing_list(
   list(
@@ -431,18 +340,6 @@ my_borrowing_list <- sim_borrowing_list(
 )
 
 my_borrowing_list
-```
-
-```
-## SimBorrowingList object with  4  different scenario(s)
-##   borrowing_scenario
-## 1       No borrowing
-## 2     Full borrowing
-## 3 BDB - conservative
-## 4   BDB - aggressive
-```
-
-```r
 # SimBorrowingList object with  4  different scenario(s)
 #   borrowing_scenario
 # 1       No borrowing
@@ -467,27 +364,10 @@ or a list of these classes, created with `sim_treatment_list()`. Let's
 just use a single instance:
 
 
-
 ```r
 my_sim_treat <- treatment_details("trt", prior_normal(0, 1000))
 
 my_sim_treat
-```
-
-```
-## Treatment object
-## 
-## Treatment flag column: trt 
-## 
-## Treatment effect prior:
-## Normal Distribution
-## Parameters:
-##  Stan  R    Value
-##  mu    mean    0 
-##  sigma sd   1000
-```
-
-```r
 # Treatment object
 # 
 # Treatment flag column: trt 
@@ -512,11 +392,10 @@ unique list elements in `data_matrix_list`, `outcome`, `borrowing`,
 generation scenarios and 4 borrowing
 scenarios. The other inputs just have one scenario (or 0 for `covariate`,
 which is equivalent to one scenario). This means we should expect
-4 $/times$ 4
+4 $\times$ 4
 $=$ 16
 combinations of parameters. Let's create a simulation object of class
 `Simulation`:
-
 
 
 
@@ -533,10 +412,6 @@ simulation_obj <- create_simulation_obj(
 simulation_obj
 ```
 
-```
-## Simulation object with  16  combinations and  160  analyses ready to sample.  This is a lot of combinations/analyses! Consider breaking the  study into different simulation objects. Or if you  prefer to use these combinations, call `mcmc_sample()` next.
-```
-
 
 While we get a warning about the size of the simulation study, we are not worried
 because we are limiting our MCMC samples below in this example.
@@ -545,66 +420,25 @@ We can access the guide to see the specific scenarios that will be
 simulated with `show_guide()`:
 
 
-
 ```r
 show_guide(simulation_obj)
-```
-
-```
-##    true_hr          drift_hr id n_datasets_per_param outcome_scenario
-## 1      0.6       No drift HR  1                   10          default
-## 2      1.0       No drift HR  2                   10          default
-## 3      0.6 Moderate drift HR  3                   10          default
-## 4      1.0 Moderate drift HR  4                   10          default
-## 5      0.6       No drift HR  1                   10          default
-## 6      1.0       No drift HR  2                   10          default
-## 7      0.6 Moderate drift HR  3                   10          default
-## 8      1.0 Moderate drift HR  4                   10          default
-## 9      0.6       No drift HR  1                   10          default
-## 10     1.0       No drift HR  2                   10          default
-## 11     0.6 Moderate drift HR  3                   10          default
-## 12     1.0 Moderate drift HR  4                   10          default
-## 13     0.6       No drift HR  1                   10          default
-## 14     1.0       No drift HR  2                   10          default
-## 15     0.6 Moderate drift HR  3                   10          default
-## 16     1.0 Moderate drift HR  4                   10          default
-##    borrowing_scenario covariate_scenario treatment_scenario
-## 1        No borrowing      No adjustment            default
-## 2        No borrowing      No adjustment            default
-## 3        No borrowing      No adjustment            default
-## 4        No borrowing      No adjustment            default
-## 5      Full borrowing      No adjustment            default
-## 6      Full borrowing      No adjustment            default
-## 7      Full borrowing      No adjustment            default
-## 8      Full borrowing      No adjustment            default
-## 9  BDB - conservative      No adjustment            default
-## 10 BDB - conservative      No adjustment            default
-## 11 BDB - conservative      No adjustment            default
-## 12 BDB - conservative      No adjustment            default
-## 13   BDB - aggressive      No adjustment            default
-## 14   BDB - aggressive      No adjustment            default
-## 15   BDB - aggressive      No adjustment            default
-## 16   BDB - aggressive      No adjustment            default
-```
-
-```r
 #    true_hr          drift_hr id n_datasets_per_param outcome_scenario
-# 1      0.6       No drift HR  1                  100          default
-# 2      1.0       No drift HR  2                  100          default
-# 3      0.6 Moderate drift HR  3                  100          default
-# 4      1.0 Moderate drift HR  4                  100          default
-# 5      0.6       No drift HR  1                  100          default
-# 6      1.0       No drift HR  2                  100          default
-# 7      0.6 Moderate drift HR  3                  100          default
-# 8      1.0 Moderate drift HR  4                  100          default
-# 9      0.6       No drift HR  1                  100          default
-# 10     1.0       No drift HR  2                  100          default
-# 11     0.6 Moderate drift HR  3                  100          default
-# 12     1.0 Moderate drift HR  4                  100          default
-# 13     0.6       No drift HR  1                  100          default
-# 14     1.0       No drift HR  2                  100          default
-# 15     0.6 Moderate drift HR  3                  100          default
-# 16     1.0 Moderate drift HR  4                  100          default
+# 1      0.6       No drift HR  1                   10          default
+# 2      1.0       No drift HR  2                   10          default
+# 3      0.6 Moderate drift HR  3                   10          default
+# 4      1.0 Moderate drift HR  4                   10          default
+# 5      0.6       No drift HR  1                   10          default
+# 6      1.0       No drift HR  2                   10          default
+# 7      0.6 Moderate drift HR  3                   10          default
+# 8      1.0 Moderate drift HR  4                   10          default
+# 9      0.6       No drift HR  1                   10          default
+# 10     1.0       No drift HR  2                   10          default
+# 11     0.6 Moderate drift HR  3                   10          default
+# 12     1.0 Moderate drift HR  4                   10          default
+# 13     0.6       No drift HR  1                   10          default
+# 14     1.0       No drift HR  2                   10          default
+# 15     0.6 Moderate drift HR  3                   10          default
+# 16     1.0 Moderate drift HR  4                   10          default
 #    borrowing_scenario covariate_scenario treatment_scenario
 # 1        No borrowing      No adjustment            default
 # 2        No borrowing      No adjustment            default
@@ -638,7 +472,6 @@ specifies the quantiles for null coverage and true coverage. For instance,
 
 
 
-
 ```r
 simulation_res <- mcmc_sample(
   simulation_obj,
@@ -650,489 +483,6 @@ simulation_res <- mcmc_sample(
 )
 ```
 
-```
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.2 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.2 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.2 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.1 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.3 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.3 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.3 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.3 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.3 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.3 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.3 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.3 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.3 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.3 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.3 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.3 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.3 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.3 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.3 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.3 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.3 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.3 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.3 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.3 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.3 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.5 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.5 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 1.0 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.5 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.5 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.5 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.7 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.5 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.6 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.5 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.5 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.6 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.5 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.3 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.5 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.5 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.5 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.6 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.5 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.5 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-## Running MCMC with 1 chain...
-## 
-## Chain 1 finished in 0.4 seconds.
-```
-
 
 
 ***Note*** unlike an analysis on a single dataset, `mcmc_sample()` does not
@@ -1141,18 +491,8 @@ Instead, it returns a class unique to simulation study results:
 `MCMCSimulationResult`.
 
 
-
 ```r
 class(simulation_res)
-```
-
-```
-## [1] "MCMCSimulationResult"
-## attr(,"package")
-## [1] "psborrow2"
-```
-
-```r
 # [1] "MCMCSimulationResult"
 # attr(,"package")
 # [1] "psborrow2"
@@ -1162,63 +502,34 @@ Let's look at the performance of our simulation study by extracting the data.fra
 that summarizes results, `get_results()`:
 
 
-
 ```r
 simulation_res_df <- get_results(simulation_res)
 head(simulation_res_df)
-```
-
-```
-##   true_hr          drift_hr id n_datasets_per_param outcome_scenario
-## 1     0.6       No drift HR  1                   10          default
-## 2     1.0       No drift HR  2                   10          default
-## 3     0.6 Moderate drift HR  3                   10          default
-## 4     1.0 Moderate drift HR  4                   10          default
-## 5     0.6       No drift HR  1                   10          default
-## 6     1.0       No drift HR  2                   10          default
-##   borrowing_scenario covariate_scenario treatment_scenario    trt_var
-## 1       No borrowing      No adjustment            default 0.06375600
-## 2       No borrowing      No adjustment            default 0.06344470
-## 3       No borrowing      No adjustment            default 0.06346777
-## 4       No borrowing      No adjustment            default 0.06239393
-## 5     Full borrowing      No adjustment            default 0.02564888
-## 6     Full borrowing      No adjustment            default 0.02587308
-##     mse_mean   bias_mean null_coverage true_coverage
-## 1 0.04507703 0.045569887           0.5             1
-## 2 0.17216598 0.149958706           1.0             1
-## 3 0.09317867 0.147219849           0.8             1
-## 4 0.09396857 0.027528022           1.0             1
-## 5 0.01210678 0.008835847           0.0             1
-## 6 0.06348567 0.081642491           1.0             1
-```
-
-```r
 #   true_hr          drift_hr id n_datasets_per_param outcome_scenario
-# 1     0.6       No drift HR  1                  100          default
-# 2     1.0       No drift HR  2                  100          default
-# 3     0.6 Moderate drift HR  3                  100          default
-# 4     1.0 Moderate drift HR  4                  100          default
-# 5     0.6       No drift HR  1                  100          default
-# 6     1.0       No drift HR  2                  100          default
+# 1     0.6       No drift HR  1                   10          default
+# 2     1.0       No drift HR  2                   10          default
+# 3     0.6 Moderate drift HR  3                   10          default
+# 4     1.0 Moderate drift HR  4                   10          default
+# 5     0.6       No drift HR  1                   10          default
+# 6     1.0       No drift HR  2                   10          default
 #   borrowing_scenario covariate_scenario treatment_scenario    trt_var
-# 1       No borrowing      No adjustment            default 0.06383754
-# 2       No borrowing      No adjustment            default 0.06233316
-# 3       No borrowing      No adjustment            default 0.06306555
-# 4       No borrowing      No adjustment            default 0.06333808
-# 5     Full borrowing      No adjustment            default 0.02648792
-# 6     Full borrowing      No adjustment            default 0.02573194
-#     mse_mean  bias_mean null_coverage true_coverage
-# 1 0.05915273 0.06270199          0.58          0.96
-# 2 0.13032971 0.03916893          0.96          0.96
-# 3 0.04724394 0.01524864          0.44          0.96
-# 4 0.13079915 0.03571795          0.95          0.95
-# 5 0.02027734 0.02150292          0.10          0.96
-# 6 0.05067948 0.01040672          0.97          0.97
+# 1       No borrowing      No adjustment            default 0.06171862
+# 2       No borrowing      No adjustment            default 0.06165325
+# 3       No borrowing      No adjustment            default 0.06303271
+# 4       No borrowing      No adjustment            default 0.06072376
+# 5     Full borrowing      No adjustment            default 0.02659581
+# 6     Full borrowing      No adjustment            default 0.02598029
+#     mse_mean    bias_mean null_coverage true_coverage
+# 1 0.07680297  0.144361521           0.8           0.9
+# 2 0.17016287  0.065743886           0.9           0.9
+# 3 0.08657822  0.109632669           0.7           0.9
+# 4 0.16115855  0.036929288           0.9           0.9
+# 5 0.02404849  0.086578598           0.2           1.0
+# 6 0.05685935 -0.009327495           1.0           1.0
 ```
 
 Let's quickly visualize the results using `ggplot2`. We will first
 load `ggplot2` and factorize our borrowing scenarios:
-
 
 
 ```r
@@ -1239,8 +550,7 @@ simulation_res_df$borrowing_scenario <- factor(simulation_res_df$borrowing_scena
 ### MSE
 
 
-
-```r
+```{.r .fold-hide}
 ggplot(simulation_res_df) +
   geom_bar(aes(x = factor(true_hr), fill = borrowing_scenario, y = mse_mean),
     stat = "identity", position = "dodge"
@@ -1254,9 +564,10 @@ ggplot(simulation_res_df) +
   scale_fill_manual(values = c("#EF798A", "#F7A9A8", "#7D82B8", "#613F75"))
 ```
 
-![plot of chunk unnamed-chunk-19](figure-simulation_study-unnamed-chunk-19-1.png)
-
-
+<div class="figure" style="text-align: center">
+<img src="figure-simulation_study-unnamed-chunk-23-1.png" alt="plot of chunk unnamed-chunk-23"  />
+<p class="caption">plot of chunk unnamed-chunk-23</p>
+</div>
 
 ### Type I error
 
@@ -1264,8 +575,7 @@ Because we included a true HR of 1.0, we can evaluate type I error by looking
 at the compliment to the true parameter coverage:
 
 
-
-```r
+```{.r .fold-hide}
 ggplot(simulation_res_df[simulation_res_df$true_hr == 1.0, ]) +
   geom_bar(aes(x = factor(drift_hr), fill = borrowing_scenario, y = 1 - true_coverage),
     stat = "identity", position = "dodge"
@@ -1280,17 +590,17 @@ ggplot(simulation_res_df[simulation_res_df$true_hr == 1.0, ]) +
   geom_hline(aes(yintercept = 0.05), linetype = 2)
 ```
 
-![plot of chunk unnamed-chunk-20](figure-simulation_study-unnamed-chunk-20-1.png)
-
-
+<div class="figure" style="text-align: center">
+<img src="figure-simulation_study-unnamed-chunk-24-1.png" alt="plot of chunk unnamed-chunk-24"  />
+<p class="caption">plot of chunk unnamed-chunk-24</p>
+</div>
 
 ### Power
 
 We can include power by looking at the results for our true simulation of 0.6.
 
 
-
-```r
+```{.r .fold-hide}
 ggplot(simulation_res_df[simulation_res_df$true_hr == 0.6, ]) +
   geom_bar(aes(x = factor(drift_hr), fill = borrowing_scenario, y = 1 - null_coverage),
     stat = "identity", position = "dodge"
@@ -1305,9 +615,10 @@ ggplot(simulation_res_df[simulation_res_df$true_hr == 0.6, ]) +
   geom_hline(aes(yintercept = 0.80), linetype = 2)
 ```
 
-![plot of chunk unnamed-chunk-21](figure-simulation_study-unnamed-chunk-21-1.png)
-
-
+<div class="figure" style="text-align: center">
+<img src="figure-simulation_study-unnamed-chunk-25-1.png" alt="plot of chunk unnamed-chunk-25"  />
+<p class="caption">plot of chunk unnamed-chunk-25</p>
+</div>
 
 
 ### EHSS
@@ -1315,7 +626,7 @@ ggplot(simulation_res_df[simulation_res_df$true_hr == 0.6, ]) +
 We can calculate the external historical sample size (EHSS) based on the simulation results. 
 
 
-```r
+```{.r .fold-hide}
 var_mat <- do.call(rbind, simulation_res@results$trt_var)
 N_internalcontrol <- 250*0.3
 
@@ -1337,14 +648,15 @@ ggplot(simulation_res_df2) +
   geom_hline(aes(yintercept = N_internalcontrol), linetype = 2)
 ```
 
-![plot of chunk unnamed-chunk-22](figure-simulation_study-unnamed-chunk-22-1.png)
-
-
+<div class="figure" style="text-align: center">
+<img src="figure-simulation_study-unnamed-chunk-26-1.png" alt="plot of chunk unnamed-chunk-26"  />
+<p class="caption">plot of chunk unnamed-chunk-26</p>
+</div>
 
 
 ### Optimal Accuracy Design 
 
-We can also compare designs for accuracy on the basis of their Euclidean distance to the ideal design by minimizing the type I and type II errors (Zabor, E. C. et al. (2022).). We can visualize the accuracy of any design using a scatterplot displaying type I error rate on the x-axis and power (1 -type II error rate) on the y-axis. A perfectly accurate design approaches the point (0, 1), representing no type I error and power of one.
+We can also compare designs for accuracy on the basis of their Euclidean distance to the ideal design by minimizing the type I and type II errors [@zabor2022optimal]. We can visualize the accuracy of any design using a scatterplot displaying type I error rate on the x-axis and power (1 -type II error rate) on the y-axis. A perfectly accurate design approaches the point (0, 1), representing no type I error and power of one.
 
 In the real design of clinical trial, we can designate probability to scenarios of drift hazard ratio and obtain weighted Euclidean distance to the ideal design. An example shows the probability of moderate drift hazard ratio is 0.2 and the probability of no drift hazard ratio is 0.8. 
 
@@ -1352,7 +664,7 @@ In the real design of clinical trial, we can designate probability to scenarios 
 
 
 
-```r
+```{.r .fold-hide}
 df_accuracy <- data.frame(simulation_res_df2[simulation_res_df2$true_hr == 1.0, 
                                             c("drift_hr", "borrowing_scenario")], 
                           typeI = 1 - simulation_res_df2[simulation_res_df2$true_hr == 1.0,
@@ -1381,7 +693,10 @@ ggplot(df_sum) +
   ggtitle("Optimal Accuracy Design")
 ```
 
-![plot of chunk unnamed-chunk-23](figure-simulation_study-unnamed-chunk-23-1.png)
+<div class="figure" style="text-align: center">
+<img src="figure-simulation_study-unnamed-chunk-27-1.png" alt="plot of chunk unnamed-chunk-27"  />
+<p class="caption">plot of chunk unnamed-chunk-27</p>
+</div>
 
 
-
+# References
